--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <meta name="keyword" content="Symbol,XYM,NEM,XEM,MOSAIC">
+    <meta meta name="description" content="Symbolツール">
+    <link rel="canonical" href="https://ishidad2.github.io/symbol-tx-visualization/">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@ishidad2">
+    <meta name="twitter:title" content="Symbolツール">
+    <meta name="twitter:description" content="指定したSymbolアドレスのこれまでの送信先と送信件数を調べることが出来るツールです">
+    <meta name="twitter:image" content="https://ishidad2.github.io/symbol-tx-visualization/images/logo.png">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
